--- a/inner/index.html
+++ b/inner/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bootstrap Grid</title>
+        <title>Responsive web design</title>
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/white.css">
         <link rel="stylesheet" type="text/css" href="lib/css/zenburn.css">
